css/bootstrap.css
/* ... */
a.text-light:hover, a.text-light:focus {
  color: #dae0e5 !important;
}

.text-dark {
  color: #343a40 !important;
}

a.text-dark:hover, a.text-dark:focus {
  color: #1d2124 !important;
}

.text-muted {
  color: #868e96 !important;
}

.text-hide {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

.visible {
  visibility: visible !important;
}

.invisible {
  visibility: hidden !important;
}

@media print {
  *,
  *::before,
  *::after {
    text-shadow: none !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
  }
  a:not(.btn) {
    text-decoration: underline;
  }
  abbr[title]::after {
    content: " (" attr(title) ")";
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  @page {
    size: a3;
  }
  body {
    min-width: 992px !important;
  }
  .container {
    min-width: 992px !important;
  }
  .navbar {
    display: none;
  }
  .badge {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #ddd !important;
  }
}

.navbar {
  font-size: 0.875em;
}

.bg-dark {
  background-color: #02B875 !important;
}

.bg-light {
  background-color: #fff !important;
  border: 1px solid rgba(0, 0, 0, 0.1);
}

.bg-light.navbar-fixed-top {
  border-width: 0 0 1px 0;
}

.bg-light.navbar-fixed-bottom {
  border-width: 1px 0 0 0;
}

.btn {
  border-radius: 1.078em;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 0.875em;
}

.btn-lg, .btn-group-lg > .btn {
  border-radius: 2.688em;
}

.btn-sm, .btn-group-sm > .btn {
  border-radius: 0.844em;
  font-size: 0.688em;
}

.btn-secondary, .btn-secondary:hover, .btn-warning, .btn-warning:hover {
  color: #fff;
}

p {
  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
}

blockquote {
  font-style: italic;
}

footer {
  font-size: 0.875em;
}

.lead {
  color: #868e96;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

table,
.table {
  font-size: 0.875em;
}

table-success, table-info, table-warning, table-danger,
.table-success,
.table-info,
.table-warning,
.table-danger {
  color: #fff;
}

.table-success, .table-success > th, .table-success > td {
  background-color: #02B875;
}

.table-info, .table-info > th, .table-info > td {
  background-color: #17a2b8;
}

.table-danger, .table-danger > th, .table-danger > td {
  background-color: #d9534f;
}

.table-warning, .table-warning > th, .table-warning > td {
  background-color: #f0ad4e;
}

.table-hover .table-success:hover, .table-hover .table-success:hover > th, .table-hover .table-success:hover > td {
  background-color: #029f65;
}

.table-hover .table-info:hover, .table-hover .table-info:hover > th, .table-hover .table-info:hover > td {
  background-color: #148ea1;
}

.table-hover .table-danger:hover, .table-hover .table-danger:hover > th, .table-hover .table-danger:hover > td {
  background-color: #d43f3a;
}

.table-hover .table-warning:hover, .table-hover .table-warning:hover > th, .table-hover .table-warning:hover > td {
  background-color: #eea236;
}

.nav,
.breadcrumb,
.pagination {
  font-size: 0.875em;
}

.dropdown-menu {
  font-size: 0.875em;
}

.alert {
  border: none;
  color: #fff;
  font-size: 0.875em;
}

.alert, .alert p {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.alert a, .alert .alert-link {
  color: #fff;
  font-weight: normal;
  text-decoration: underline;
}

.alert-primary {
  background-color: #4582EC;
}

.alert-secondary {
  background-color: #adb5bd;
}

.alert-success {
  background-color: #02B875;
}

.alert-info {
  background-color: #17a2b8;
}

.alert-warning {
  background-color: #f0ad4e;
}

.alert-danger {
  background-color: #d9534f;
}

.alert-light {
  background-color: #f8f9fa;
}

.alert-dark {
  background-color: #343a40;
}

.alert-light,
.alert-light a,
.alert-light .alert-link {
  color: #343a40;
}

.badge {
  vertical-align: bottom;
}

.badge-secondary, .badge-warning {
  color: #fff;
}

.tooltip {
  font-size: 11px;
}

.list-group {
  font-size: 0.875em;
}

.jumbo {
  margin-top: -120px;
  padding-top: 240px;
  padding-bottom: 50px;
  margin-bottom: 50px;
}

.jumbo-header {
  color: white;
}

.jumbo-solid {
  background-color: #3C6991;
}

